--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 management:
   security:
     enabled: false
+  endpoints:
+    web:
+      exposure:
+        include: *
+---
 server:
   #ssl:
   #  key-store: classpath:keystore.jks
@@ -27,4 +32,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+  messages:
+    basename: messages
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
 
+---
