--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
+spring.messages.basename=messages
+logging.level.org.springframework=info
+spring.jackson.serialization.write-dates-as-timestamps=false
+management.endpoints.web.exposure.include=*
