--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=none
 spring.messages.basename=messages
 logging.level.org.springframework=info
 spring.jackson.serialization.write-dates-as-timestamps=false
 management.endpoints.web.exposure.include=*
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
