--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=none
 spring.messages.basename=messages
 logging.level.org.springframework=info
 spring.jackson.serialization.write-dates-as-timestamps=false
